--- a/CloudStorage/DefaultHeartiumEngine.ini
+++ b/CloudStorage/DefaultHeartiumEngine.ini
@@ -1,11 +1,11 @@
 
 [OnlineSubsystemMcp.Xmpp]
-bUseSSL=true
+bUseSSL=false
 ServerAddr="ws://127.0.0.1"
 ServerPort=80
 
 
 [OnlineSubsystemMcp.Xmpp Prod]
-bUseSSL=true
+bUseSSL=false
 ServerAddr="ws://127.0.0.1"
 ServerPort=80
