--- a/CloudStorage/DefaultHeartiumEngine.ini
+++ b/CloudStorage/DefaultHeartiumEngine.ini
@@ -5,7 +5,7 @@ ServerPort=80
 
 [OnlineSubsystemMcp.Xmpp Prod]
 bUseSSL=false
-ServerAddr="ws://lawinserverxmpp.herokuapp.com"
+ServerAddr="ws://heartiumserverxmpp.herokuapp.com"
 ServerPort=80
 
 [OnlineSubsystemMcp]
